--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,10 @@
 
     <link rel="stylesheet" href="/global.css" />
     <link rel="stylesheet" href="/build/bundle.css" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto&display=swap"
+      rel="stylesheet"
+    />
 
     <script defer src="/build/bundle.js"></script>
   </head>
