feat: add meta tags

--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,23 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
 
-    <title>Eons</title>
+    <title>Eon</title>
+
+    <meta property="og:title" content="Eon" />
+    <meta
+      property="og:description"
+      content="An interactive geologic time scale."
+    />
+    <meta
+      property="og:image"
+      content="https://eon.bullinger.dev/public/eon_screenshot.jpg"
+    />
+    <meta property="og:url" content="https://eon.bullinger.dev/" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta
+      name="twitter:image"
+      content="https://eon.bullinger.dev/public/eon_screenshot.jpg"
+    />
 
     <link rel="stylesheet" href="/global.css" />
     <link rel="stylesheet" href="/build/bundle.css" />
