--- a/public/index.html
+++ b/public/index.html
@@ -13,13 +13,15 @@
     />
     <meta
       property="og:image"
-      content="https://eon.bullinger.dev/public/eon_screenshot.jpg"
+      content="https://eon.bullinger.dev/public/images/eon_screenshot.jpg"
     />
+    <meta property="og:image:width" content="3584" />
+    <meta property="og:image:height" content="2240" />
     <meta property="og:url" content="https://eon.bullinger.dev/" />
     <meta name="twitter:card" content="summary_large_image" />
     <meta
       name="twitter:image"
-      content="https://eon.bullinger.dev/public/eon_screenshot.jpg"
+      content="https://eon.bullinger.dev/public/images/eon_screenshot.jpg"
     />
 
     <link rel="stylesheet" href="/global.css" />
